<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_gravity="center"
                android:id="@+id/toolbar_title" />

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:paddingTop="10dp">
        <ImageView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:scaleType="fitStart"
            android:adjustViewBounds="true"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/logo"
            android:id="@+id/imageLogo" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/imageLogo"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:id="@+id/usenameLayout">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/human"
                android:id="@+id/imageHuman" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/input_username"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/hint_username"
                     android:inputType="text"/>
                <requestFocus/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/usenameLayout"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:id="@+id/passwordLayout">
        <ImageView
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/lock"
                android:id="@+id/imageLock" />
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="@+id/imageLock">
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/input_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/hint_password"
                     android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <Button android:id="@+id/btn_login"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/passwordLayout"
            android:layout_centerHorizontal="true"
            android:text="@string/btn_login"
            android:textSize="16dp"
            android:background="@drawable/button_oval"
            android:textColor="@android:color/white" />
        <Button android:id="@+id/btn_goRegister"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/btn_login"
            android:layout_centerHorizontal="true"
            android:text="@string/btn_register"
            android:textSize="16dp"
            android:background="@drawable/button_oval"
            android:textColor="@android:color/white"
            android:padding="20dp" />
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>